apps/ingenieuses/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingenieuses
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-stg
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - secretName: ingenieuses-tls
      hosts:
        - ingenieuses.ca
  rules:
    - host: ingenieuses.ca
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ingenieuses-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingenieuses-cedille-club
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - secretName: ingenieuses-cedille-club-tls
      hosts:
        - ingenieuses.prod.cedille.club
  rules:
    - host: ingenieuses.prod.cedille.club
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ingenieuses-svc
                port:
                  number: 80
